# MPI-Demos

./: CMakeLists.txt  README.md  build.sh
common/: CMakeLists.txt  MPI_Connection_Manager.cpp  MPI_Connection_Manager.hpp  Socket.cpp  Socket.hpp  String_Utilities.hpp
connect-demo/: CMakeLists.txt  connect-client-demo.cpp  connect-server-demo.cpp
rpc-demo/: CMakeLists.txt  MPI_RPC_Address_Table.cpp  MPI_RPC_Address_Table.hpp  MPI_RPC_Arguments.hpp  MPI_RPC_Interface.hpp  MPI_RPC_Message_Builder.cpp  MPI_RPC_Message_Builder.hpp  MPI_RPC_Results.hpp  MPI_RPC_Server.cpp  MPI_RPC_Server.hpp  Simple_Math.hpp  rpc-demo.cpp  rpc-server.cpp
scratch/: boost-serializable-demo.cpp
scripts/: run-connect-demo.sh  run-spawn-demo.sh
spawn-demo/: CMakeLists.txt
spawn-demo/src/: Spawn_Demo_Common.cpp  Spawn_Demo_Common.hpp  child-persistent.cpp  child-segfault.cpp  child-temporary.cpp  spawn-demo.cpp
